# Guider.pro

./: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: blank.yml
app/: models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_add_data.py
guider/: asgi.py  settings.py  urls.py  wsgi.py
